--- a/.gitignore
+++ b/.gitignore
@@ -253,8 +253,8 @@ paket-files/
 
 tools/
 _site/
-test/Strinken.Tests/Coverage/
-test/Strinken.Tests/opencover.4.6.589/
+test/NameInProgress.Tests/Coverage/
+test/NameInProgress.Tests/opencover.4.6.589/
 *Coverage*
 TestResult.first.xml
 docs/output/
