--- a/test/NameInProgress.Tests/NameInProgress.Tests.csproj
+++ b/test/NameInProgress.Tests/NameInProgress.Tests.csproj
@@ -10,6 +10,10 @@
     <NoWarn>1701;1702;1705;CA1822</NoWarn>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="FakeItEasy" Version="4.5.1" />
     <PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="4.5.1" />
@@ -23,4 +27,5 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\NameInProgress\NameInProgress.csproj" />
   </ItemGroup>
+  
 </Project>
