--- a/test/NameInProgress.Tests/NameInProgress.Tests.csproj
+++ b/test/NameInProgress.Tests/NameInProgress.Tests.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\NameInProgress\NameInProgress.csproj" />
+    <ProjectReference Include="..\NameInProgress.Tests.Data\NameInProgress.Tests.Data.csproj" />
   </ItemGroup>
   
 </Project>
