--- a/src/NameInProgress/NameInProgress.csproj
+++ b/src/NameInProgress/NameInProgress.csproj
@@ -35,7 +35,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.8.0-beta3" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.8.0" />
   </ItemGroup>
 
 </Project>
